Bug 93919 - DOCX import: indent of bullet paragraph is wrong
Summary: DOCX import: indent of bullet paragraph is wrong
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4.0 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.1.0 target:5.0.3 target:4.4.6
Keywords:
Depends on:
Blocks:
 
Reported: 2015-09-04 09:48 UTC by Andras Timar
Modified: 2016-10-25 19:21 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
bugdoc (DOCX) (14.98 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2015-09-04 09:48 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2015-09-04 09:48:38 UTC
Created attachment 118412 [details]
bugdoc (DOCX)

In Word the paragraph has the following indent values:
Left: 0.64cm Hanging: 0.63cm

In Writer the paragraph has the following indent values:
Before text (a.k.a. Left): 0cm First line: -0.63cm

Writer does not have hanging indent, it is usually emulated with Before text + First line, so in this case we should have:
Before text: 1.27cm First line: -0.63cm
This looks like the same as shown in Word.
Comment 1 raal 2015-09-05 12:30:07 UTC
Reproducible with Version: 5.1.0.0.alpha1+
Build ID: 50f2c712c46c66264279ab3b61888e491a4d8dca
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2015-09-04_06:07:29
Comment 2 Commit Notification 2015-09-28 12:04:50 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=56341e5d496f576dc45fe8e6c44831d780fecb73

bnc#939996 tdf#93919 DOCX import: fix left-from-style and first-from-direct

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-09-30 11:20:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8e911fe7e14d20ea5abe2991ed93ced62385462d&h=libreoffice-5-0

bnc#939996 tdf#93919 DOCX import: fix left-from-style and first-from-direct

It will be available in 5.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Timur 2015-09-30 11:47:14 UTC
It was same from 3.4.0. Before, from OO, there were some additional line breaks.
Comment 5 Andras Timar 2015-09-30 11:49:58 UTC
This patch alone is not enough to fix the bug in 4.4. Bullets are not there.
https://gerrit.libreoffice.org/#/c/18907/
Comment 6 Commit Notification 2015-10-01 09:20:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=950cfbd75a216527d850351e4b3e0be4f8870a7d&h=libreoffice-4-4

bnc#939996 tdf#93919 DOCX import: fix left-from-style and first-from-direct

It will be available in 4.4.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.