bnc#939996 tdf#93919 DOCX import: fix left-from-style and first-from-direct

With this, <w:ind w:hanging="..."/> as direct paragraph formatting and
<w:ind w:left="..." w:hanging="..."/> as a numbering level formatting is
properly merged, i.e. w:left is not lost, defaulting to 0.

Change-Id: If5534fbd9ee6d41139b0ed3a3df9d0cc5aad3239